work in progress

--- a/Capstone_Project.ipynb
+++ b/Capstone_Project.ipynb
@@ -2,9 +2,146 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Brand Name</th>\n",
+       "      <th>Device Type</th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>Color</th>\n",
+       "      <th>Selling Price</th>\n",
+       "      <th>Original Price</th>\n",
+       "      <th>Display</th>\n",
+       "      <th>Rating (Out of 5)</th>\n",
+       "      <th>Strap Material</th>\n",
+       "      <th>Average Battery Life (in days)</th>\n",
+       "      <th>Reviews</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Xiaomi</td>\n",
+       "      <td>FitnessBand</td>\n",
+       "      <td>Smart Band 5</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>2,499</td>\n",
+       "      <td>2,999</td>\n",
+       "      <td>AMOLED Display</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>Thermoplastic polyurethane</td>\n",
+       "      <td>14</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Xiaomi</td>\n",
+       "      <td>FitnessBand</td>\n",
+       "      <td>Smart Band 4</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>2,099</td>\n",
+       "      <td>2,499</td>\n",
+       "      <td>AMOLED Display</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>Thermoplastic polyurethane</td>\n",
+       "      <td>14</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Xiaomi</td>\n",
+       "      <td>FitnessBand</td>\n",
+       "      <td>HMSH01GE</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>1,722</td>\n",
+       "      <td>2,099</td>\n",
+       "      <td>LCD Display</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>Leather</td>\n",
+       "      <td>14</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Xiaomi</td>\n",
+       "      <td>FitnessBand</td>\n",
+       "      <td>Smart Band 5</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>2,469</td>\n",
+       "      <td>2,999</td>\n",
+       "      <td>AMOLED Display</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>Thermoplastic polyurethane</td>\n",
+       "      <td>14</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Xiaomi</td>\n",
+       "      <td>FitnessBand</td>\n",
+       "      <td>Band 3</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>1,799</td>\n",
+       "      <td>2,199</td>\n",
+       "      <td>OLED Display</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>Plastic</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Brand Name  Device Type    Model Name  Color Selling Price Original Price  \\\n",
+       "0     Xiaomi  FitnessBand  Smart Band 5  Black         2,499          2,999   \n",
+       "1     Xiaomi  FitnessBand  Smart Band 4  Black         2,099          2,499   \n",
+       "2     Xiaomi  FitnessBand      HMSH01GE  Black         1,722          2,099   \n",
+       "3     Xiaomi  FitnessBand  Smart Band 5  Black         2,469          2,999   \n",
+       "4     Xiaomi  FitnessBand        Band 3  Black         1,799          2,199   \n",
+       "\n",
+       "          Display  Rating (Out of 5)              Strap Material  \\\n",
+       "0  AMOLED Display                4.1  Thermoplastic polyurethane   \n",
+       "1  AMOLED Display                4.2  Thermoplastic polyurethane   \n",
+       "2     LCD Display                3.5                     Leather   \n",
+       "3  AMOLED Display                4.1  Thermoplastic polyurethane   \n",
+       "4    OLED Display                4.3                     Plastic   \n",
+       "\n",
+       "   Average Battery Life (in days) Reviews  \n",
+       "0                              14     NaN  \n",
+       "1                              14     NaN  \n",
+       "2                              14     NaN  \n",
+       "3                              14     NaN  \n",
+       "4                               7     NaN  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "import numpy as np \n",
@@ -13,13 +150,13 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
-    "datos = pd.read_csv(\"Fitness_trackers_updated.csv\")\n",
-    "datos.head(5)"
+    "df = pd.read_csv(\"Fitness_trackers_updated.csv\")\n",
+    "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -154,20 +291,20 @@
        "4     NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datos = datos.rename(columns = {\"Brand Name\":\"brand\", \"Device Type\":\"type\", \"Model Name\":\"model\", \"Color\":\"color\", \"Selling Price\":\"selling_price\", \"Original Price\": \"original_price\", \"Display\":\"display\", \"Rating (Out of 5)\":\"rating\", \"Strap Material\":\"strap_material\", \"Average Battery Life (in days)\":\"avg_battery_days\", \"Reviews\":\"reviews\"})\n",
+    "df = df.rename(columns = {\"Brand Name\":\"brand\", \"Device Type\":\"type\", \"Model Name\":\"model\", \"Color\":\"color\", \"Selling Price\":\"selling_price\", \"Original Price\": \"original_price\", \"Display\":\"display\", \"Rating (Out of 5)\":\"rating\", \"Strap Material\":\"strap_material\", \"Average Battery Life (in days)\":\"avg_battery_days\", \"Reviews\":\"reviews\"})\n",
     "\n",
-    "datos.head()"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +323,7 @@
        " ['reviews', 114]]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,14 +331,14 @@
    "source": [
     "# Number of samples (distinct values excluding missing)\n",
     "nSamples = []\n",
-    "for column in datos.columns:\n",
-    "    nSamples.append([column, len(datos[column].dropna())])\n",
+    "for column in df.columns:\n",
+    "    nSamples.append([column, len(df[column].dropna())])\n",
     "nSamples\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -221,14 +358,14 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# checking the data types\n",
-    "datos.dtypes"
+    "df.dtypes"
    ]
   },
   {
@@ -240,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -375,18 +512,18 @@
        "4     NaN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datos.head(5)"
+    "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -395,15 +532,15 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nSamples2 = []\n",
-    "for column in datos.columns:\n",
-    "    nSamples2.append([column, len(datos[column].dropna())])\n",
+    "for column in df.columns:\n",
+    "    nSamples2.append([column, len(df[column].dropna())])\n",
     "\n",
     "nSamples == nSamples2"
    ]
