--- a/Capstone_Project.ipynb
+++ b/Capstone_Project.ipynb
@@ -7021,6 +7021,18 @@
     "\n",
     "Note that the OLED Retina Display has not been obtained in the graphs for battery durations greater than 7 days. Therefore, the inference from the first graph becomes a conclusion: the average battery life of Apple Smartwatches is 1 day"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion \n",
+    "- A Fitness Tracker is typically acquired with a specific goal in mind, often involving the continuous recording of physical activity for subsequent analysis. Some individuals may seek a device solely for digital timekeeping, whether affordable or luxurious. Within the realm of physical activity, there are those who aim to monitor only daily steps, others who wish to record workout sessions, and some who desire a more detailed analysis, especially for competitive purposes.\n",
+    "\n",
+    "- The division between Fitness Bands and Smartwatches seems somewhat polarized. Generally, individuals seek step tracking and sometimes intense activity monitoring in Fitness Bands, activities that do not rapidly deplete the battery. On the other hand, Smartwatches are sought for their smartphone-like functionality (which can also record activities, but their features consume battery more quickly). This dataset does not include devices designed for the moderate athlete (e.g., Polar, Suunto watches, etc.) who pursues specific goals without needing typical smartphone functionalities.\n",
+    "\n",
+    "- As these are Fitness Trackers, it would be interesting to cross-reference this data with information about the type of heart rate monitoring device (chest strap or wrist), GPS capabilities, sleep tracking, power meter, and battery capacity, among others. This additional information would contribute to a more precise understanding of the trackers.\n"
+   ]
   }
  ],
  "metadata": {
