--- a/Capstone_Project.ipynb
+++ b/Capstone_Project.ipynb
@@ -7031,7 +7031,21 @@
     "\n",
     "- The division between Fitness Bands and Smartwatches seems somewhat polarized. Generally, individuals seek step tracking and sometimes intense activity monitoring in Fitness Bands, activities that do not rapidly deplete the battery. On the other hand, Smartwatches are sought for their smartphone-like functionality (which can also record activities, but their features consume battery more quickly). This dataset does not include devices designed for the moderate athlete (e.g., Polar, Suunto watches, etc.) who pursues specific goals without needing typical smartphone functionalities.\n",
     "\n",
-    "- As these are Fitness Trackers, it would be interesting to cross-reference this data with information about the type of heart rate monitoring device (chest strap or wrist), GPS capabilities, sleep tracking, power meter, and battery capacity, among others. This additional information would contribute to a more precise understanding of the trackers.\n"
+    "- As these are Fitness Trackers, it would be interesting to cross-reference this data with information about the type of heart rate monitoring device (chest strap or wrist), GPS capabilities, sleep tracking, power meter, and battery capacity, among others. This additional information would contribute to a more precise understanding of the trackers.\n",
+    "\n",
+    "- Smartwatches have outsold Fitness Bands by a significant margin (86.7% versus 13.3%), with more devices priced below the mean than above it. Smartwatches, in general, are more expensive than Fitness Bands. Not only are they pricier, but their prices also exhibit greater variability, suggesting that, in addition to higher quality, they offer a broader range of features compared to Fitness Bands.\n",
+    "\n",
+    "- Fitness Bands have a higher battery-to-price ratio than Smartwatches due to the lower prices of the former and the high power consumption of the latter's features. Xiaomi stands out as the leading brand in this regard. Battery life varies significantly among Smartwatches, with a standard deviation of over 8 days compared to 3 days for Fitness Bands. This variation likely stems from the existence of Smartwatches with very long battery life (e.g., Garmin, up to 45 days) and others with short durations (e.g., Apple, maximum 1 day).\n",
+    "\n",
+    "- Tracker ratings, in general, are generous. Smartwatches tend to receive slightly better ratings than Fitness Bands, especially those priced above the mean. According to our dataset, the top revenue-generating brands are Apple, Garmin, Samsung, Fossil, and Fitbit. Regarding review availability, very few items have reviews, and 83.3% of the available information belongs to Smartwatches priced below the mean. However, users seem to write significantly more reviews for Fitness Bands, surpassing the number of reviews for Smartwatches by a considerable margin.\n",
+    "\n",
+    "- Lastly, display technologies and manufacturing materials significantly impact the selling price. Trackers with LED technology tend to be the cheapest, while AMOLED displays are the most common. The OLED Retina Display from Apple is the most expensive. Generally, Trackers with Nylon straps are the priciest. For a mid-range price, a good option is a Tracker with a TFT-LCD display and a silicone strap. Alternatively, considering battery life, a Tracker with around 14 days of battery life is a suitable choice.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
